--- a/src/pages/account/profile.astro
+++ b/src/pages/account/profile.astro
@@ -7,7 +7,8 @@ import EditorContainer from '@components/account-profile/editor-container.astro'
 import EditorPersonalInfo from '@components/account-profile/editor-personal-info.astro';
 import EditorPassword from '@components/account-profile/editor-password.astro';
 import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
-import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
+// import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
+import { headerCarouselOffKey } from '@misc'
 
 interface IApiResponse {
     firstName:string;
@@ -18,7 +19,7 @@ interface IApiResponse {
 }
 
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
-const headerCarouselOff = !!Astro.cookies.get(FM_HEADER_CAROUSEL_OFF_COOKIE_KEY)
+const headerCarouselOff = !!Astro.cookies.get(headerCarouselOffKey)
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/account-profile-page-init`,{
     headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,!headerCarouselOff)
