--- a/src/components/product-page/image-vertical.astro
+++ b/src/components/product-page/image-vertical.astro
@@ -1,5 +1,6 @@
 ---
-import { FM_PUBLIC_IMAGE_URL_PREFIX } from 'astro:env/client'
+// import { FM_PUBLIC_IMAGE_URL_PREFIX } from 'astro:env/client'
+import { imageUrlPrefix } from '@misc'
 import type { IProductImages } from "@components/catalogue-item/interfaces";
 
 
@@ -14,9 +15,9 @@ const { name, ext } = Astro.props as IProductImages
             ext
         ].map(e=>(
             e === ext ?
-            <img src={`${FM_PUBLIC_IMAGE_URL_PREFIX}${name}${e}`} />
+            <img src={`${imageUrlPrefix}${name}${e}`} />
             :
-            <source srcset={`${FM_PUBLIC_IMAGE_URL_PREFIX}${name}${e}`} />
+            <source srcset={`${imageUrlPrefix}${name}${e}`} />
         ))
     }
 </picture>
