--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,11 @@
 import Layout from '../components/layout/index.astro';
 import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
-import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
+// import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
+import { headerCarouselOffKey } from '@misc'
 
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
-const headerCarouselOff = !!Astro.cookies.get(FM_HEADER_CAROUSEL_OFF_COOKIE_KEY)
+const headerCarouselOff = !!Astro.cookies.get(headerCarouselOffKey)
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/index-page-init`,{
     headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,!headerCarouselOff)
