--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -4,7 +4,8 @@ import Layout from '../components/layout/index.astro'
 import type { IProduct } from '@components/catalogue-item/interfaces';
 import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
-import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
+// import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
+import { headerCarouselOffKey } from '@misc'
 
 interface IApiResponse {
     productIDs:string[];
@@ -12,7 +13,7 @@ interface IApiResponse {
 }
 
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
-const headerCarouselOff = !!Astro.cookies.get(FM_HEADER_CAROUSEL_OFF_COOKIE_KEY)
+const headerCarouselOff = !!Astro.cookies.get(headerCarouselOffKey)
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/shop-page-init${Astro.url.search}`,{
     headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,!headerCarouselOff)
 })
