--- a/src/components/shop/intro.astro
+++ b/src/components/shop/intro.astro
@@ -11,6 +11,8 @@ interface Props {
 
 const { productIDs = [], productObj, cartItemObj } = Astro.props as Props
 
+console.log(productIDs)
+
 const itemPerGroup = 24
 ---
 
