--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -45,6 +45,8 @@ let {
     apiResponse:IApiResponse;
 }
 
+console.log(productIDs)
+
 Astro.cookies.set('sessionID',sessionID,sessionCookieOption(expiresAt))
 
 productMap = {...productMap,...cartProductDetailsMap}
