--- a/src/components/account-profile/editor-password.astro
+++ b/src/components/account-profile/editor-password.astro
@@ -22,7 +22,7 @@ import SubmitBtn from "./submit-btn.astro";
         className='my-4'
         showPasswordRules
         required
-        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!?<>\\/\\@#$%\\^&\\*\\(\\)~\\`\\=\\-_\\+\\.,])[a-zA-Z0-9!?<>\\/\\@#$%\\^&\\*\\(\\)~\\`\\=\\-_\\+\\.,]{8,20}$"
+        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!?<>\\/\\@#$%\\^&\\*\\(\\)~\\=\\-_\\+\\.,])[a-zA-Z0-9!?<>\\/\\@#$%\\^&\\*\\(\\)~\\=\\-_\\+\\.,]{8,20}$"
         client:only="solid-js"
     />
     <div class="error-msg -mt-2 font-light tracking-wider mb-4 text-red-700 hidden" />
