--- a/src/components/checkout/guest/email-password.astro
+++ b/src/components/checkout/guest/email-password.astro
@@ -37,7 +37,7 @@ const encodedPathname = encodeURIComponent(Astro.url.pathname)
     className='mt-8'
     showPasswordRules
     required
-    pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!?<>\\/\\@#$%\\^&\\*\\(\\)~\\`\\=\\-_\\+\\.,])[a-zA-Z0-9!?<>\\/\\@#$%\\^&\\*\\(\\)~\\`\\=\\-_\\+\\.,]{8,20}$"
+    pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!?<>\\/\\@#$%\\^&\\*\\(\\)~\\=\\-_\\+\\.,])[a-zA-Z0-9!?<>\\/\\@#$%\\^&\\*\\(\\)~\\=\\-_\\+\\.,]{8,20}$"
     client:only="solid-js"
 />
 
