--- a/src/pages/product/[name]/[id].astro
+++ b/src/pages/product/[name]/[id].astro
@@ -80,6 +80,7 @@ const productName = productMap[id].name
     title:productName,
     isProductPage:true,
     headerCarouselTexts,
+    titleAddForHer:true
 }}>
     <Product 
         id={id} 
