--- a/src/pages/shop.astro
+++ b/src/pages/shop.astro
@@ -70,8 +70,9 @@ Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption())
     shopAddressMap,
     signedIn,
     firstName,
-    title:'All Jewellery',
+    title:'Jewellery',
     headerCarouselTexts,
+    titleAddForHer:true
 }}>
     <ShopContent productIDs={productIDs || []} productObj={productMap} cartItemObj={cartItemMap} />
 </Layout>
