--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -5,7 +5,6 @@ import type { IShopAddressMap, IShoppingBagSidebarProp } from '@misc';
 import LoadingOverlay from './loading-overlay.astro';
 import ErrorMsgModal from './error-msg-modal.astro';
 import CollectionPointOnQtyIncrease from './collection-point-on-qty-increase.astro'
-// import { FM_COMPANY_NAME_SHORT } from 'astro:env/client'
 import { companyNameShort } from '@misc'
 
 interface Props {
@@ -23,6 +22,7 @@ interface Props {
   title:string;
   isProductPage?:boolean;
   headerCarouselTexts:string[];
+  titleAddForHer?:boolean;
 }
 
 const { 
@@ -39,7 +39,8 @@ const {
   total = 0,
   title,
   isProductPage = false,
-  headerCarouselTexts
+  headerCarouselTexts,
+  titleAddForHer = false
 } = Astro.props
 const isCheckoutPage = Astro.url.pathname === '/checkout'
 
@@ -51,7 +52,7 @@ if (!!shoppingBagProp){
   if (!!cartItemMap) cartHasItems = !!Object.values(cartItemMap).map(e=>e.quantity).filter(e=>!!e).length
 } else cartHasItems = hasItemsInCart
 
-const fullTitle = !!title ? `${title.trim()} | ${companyNameShort}` : `${companyNameShort} | Fashion Jewellery For Her`
+const fullTitle = !!title ? `${titleAddForHer ? `${title.trim()} for Her` : title.trim()} | ${companyNameShort}` : `${companyNameShort} | Fashion Jewellery For Her`
 
 ---
 
