--- a/src/components/catalogue-item/carousel.astro
+++ b/src/components/catalogue-item/carousel.astro
@@ -17,7 +17,19 @@ const { images, id, productPageProduct = false, renderImages, imageSize } = Astr
 <div class="absolute top-0 bottom-0 left-0 right-0">
     {
         images.map(({name,ext},i)=>(
-            <Image {...{name,ext,catalogue:false,id,checked:i===0,index:i,len:images.length,productPageProduct,render:renderImages,imageSize}} />
+            <Image {...{
+                name,
+                ext,
+                catalogue:false,
+                id,
+                checked:i===0,
+                index:i,
+                len:images.length,
+                productPageProduct,
+                render:renderImages,
+                imageSize,
+                showRadio:images.length > 1
+            }} />
         ))
     }
 </div>
