--- a/src/pages/checkout.astro
+++ b/src/pages/checkout.astro
@@ -13,7 +13,7 @@ import Layout from '@components/layout/index.astro'
 import EmptyCart from '@components/checkout/empty-cart.astro'
 import CheckoutForm from '@components/checkout/index.astro'
 import CartLocked from '@components/checkout/cart-locked.astro';
-import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
+import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
 
 interface IApiResponse {
     addressMap:IUserAddressMap;
@@ -27,6 +27,7 @@ interface IApiResponse {
     email:string;
 }
 
+const isProduction = FM_ENV_MODE === 'production'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
 
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/checkout-page-init`,{
@@ -66,12 +67,12 @@ const {
 
 const hasItemsInCart = !!Object.values(cartItemMap).map(e=>e.quantity).filter(e=>!!e).length
 
-Astro.cookies.set('sessionID',sessionID,sessionCookieOption(expiresAt))
+Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isProduction,expiresAt))
 
 const isCheckoutPage = Astro.url.pathname === '/checkout'
 
 const csrftoken = getCookieValueWithKey(resp.headers.getSetCookie(),"csrf_token")
-Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption())
+Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
 ---
 
 <Layout {...{
