--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,19 +1,19 @@
 ---
-import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, whiteBtnClass, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
-import Layout from '../components/layout/index.astro';
-import SignInForm from '../components/sign-in-form/index.astro';
+import Layout from '@components/layout/index.astro';
+import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
 import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
-// import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
+import ContactForm from '@components/contact/index.astro'
 
 const isProduction = FM_ENV_MODE === 'production'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
 const headerCarouselOff = !!Astro.cookies.get(headerCarouselOffKey)
 
-const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/sign-in-page-init`,{
+const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/index-page-init`,{
     headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,!headerCarouselOff)
 })
-if (!resp.ok) return Astro.redirect('/')
+
+if (!resp.ok) return Astro.redirect('/maintenance')
 
 const json = await resp.json()
 const {mdwResponse} = json as {mdwResponse: IMdwResponse}
@@ -33,8 +33,7 @@ const {
     headerCarouselTexts,
 } = mdwResponse
 
-if ( signedIn ) return Astro.redirect('/')
-else Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isProduction,expiresAt))
+Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isProduction,expiresAt))
 
 const shoppingBagProp:IShoppingBagSidebarProp = {
     isSignedIn:signedIn,
@@ -56,25 +55,9 @@ Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
     prfCollectionPoint,
     shopAddressMap,
     signedIn,
-    showUserIcon:false,
     firstName,
-    title:'Sign In',
+    title:'Contact Us',
     headerCarouselTexts,
 }}>
-    <div class="flex justify-center">
-        <div class="divide-y p-8 space-y-8 max-w-md lg:grid lg:grid-cols-2 lg:divide-y-0 lg:divide-x lg:max-w-screen-lg lg:pb-10">
-            <div class="lg:pr-8">
-                <SignInForm />
-            </div>
-            <div class="divide-y space-y-8 lg:pl-8">
-                <div class="pt-6">
-                    <p class="text-center uppercase text-[0.8rem] tracking-widest">Not yet a member?</p>
-                    <a href="/sign-up" class={whiteBtnClass}>Sign Up</a>
-                </div>
-                <div class="pt-4">
-                    <a href="/track-order" class={whiteBtnClass}>Track Order</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <ContactForm />
 </Layout>
