--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,120 @@
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Index</title>
-    </head>
-    <body>
-        <p>Hello there!</p>
-    </body>
-</html>
-<script></script>
+---
+import Layout from '../components/layout/index.astro';
+import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type IMdwResponse, type IShoppingBagSidebarProp } from '@misc';
+import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
+import { headerCarouselOffKey } from '@misc'
+
+const isProduction = FM_ENV_MODE === 'production'
+const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
+const headerCarouselOff = !!Astro.cookies.get(headerCarouselOffKey)
+
+const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/index-page-init`,{
+    headers:httpRequestHeader(true,'SSR',true,false,initialSessionID,Astro.clientAddress,!headerCarouselOff)
+})
+
+if (!resp.ok) return Astro.redirect('/maintenance')
+
+const json = await resp.json()
+const {mdwResponse} = json as {mdwResponse: IMdwResponse}
+const {
+    expiresAt,
+    sessionID,
+    signedIn,
+    cartProductDetailsMap,
+    cartItemMap,
+    cartContent,
+    paymentInProcess,
+    selCollectionPoint,
+    prfCollectionPoint,
+    shopAddressMap,
+    minSpendForFreeShipping,
+    firstName,
+    headerCarouselTexts,
+} = mdwResponse
+
+Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isProduction,expiresAt))
+
+const shoppingBagProp:IShoppingBagSidebarProp = {
+    isSignedIn:signedIn,
+    cartContent,
+    freeShippingLimit:minSpendForFreeShipping,
+    cartItemMap,
+    productDetailsMap:cartProductDetailsMap
+}
+
+const csrftoken = getCookieValueWithKey(resp.headers.getSetCookie(),"csrf_token")
+Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
+
+---
+
+<Layout {...{
+    csrftoken,
+    shoppingBagProp,
+    paymentInProcess,
+    selCollectionPoint,
+    prfCollectionPoint,
+    shopAddressMap,
+    signedIn,
+    firstName,
+    title:'',
+    headerCarouselTexts,
+}}>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+    <h1 class="uppercase">Hello, World!</h1>
+</Layout>
