--- a/src/pages/track-order.astro
+++ b/src/pages/track-order.astro
@@ -3,7 +3,7 @@ import { getCookieValueWithKey, httpRequestHeader, sessionCookieOption, type IMd
 import Layout from '@components/layout/index.astro'
 import TrackOrderForm from '@components/track-order/form.astro'
 import OrderContainer from "@components/track-order/order-container.astro";
-import { FM_CLIENT_WEBSHOP_API_URL } from 'astro:env/server'
+import { FM_CLIENT_WEBSHOP_API_URL, FM_ENV_MODE } from 'astro:env/server'
 // import { FM_HEADER_CAROUSEL_OFF_COOKIE_KEY } from 'astro:env/client'
 import { headerCarouselOffKey } from '@misc'
 
@@ -14,6 +14,8 @@ interface IApiResponse {
 const { searchParams } = Astro.url
 const orderIdString = searchParams.has('order') ? searchParams.get('order') : '0'
 const orderID = isNaN(+orderIdString) ? 0 : +orderIdString
+
+const isProduction = FM_ENV_MODE === 'production'
 const initialSessionID = Astro.cookies.get("sessionID")?.value || ""
 const headerCarouselOff = !!Astro.cookies.get(headerCarouselOffKey)
 const resp = await fetch(`${ FM_CLIENT_WEBSHOP_API_URL }/webshop/track-order-page-init/${orderID}`,{
@@ -41,7 +43,7 @@ const {
     }, apiResponse:{order}
 } = await resp.json() as {mdwResponse: IMdwResponse; apiResponse:IApiResponse; }
 
-Astro.cookies.set('sessionID',sessionID,sessionCookieOption(expiresAt))
+Astro.cookies.set('sessionID',sessionID,sessionCookieOption(isProduction,expiresAt))
 
 const shoppingBagProp:IShoppingBagSidebarProp = {
     isSignedIn:signedIn,
@@ -52,7 +54,7 @@ const shoppingBagProp:IShoppingBagSidebarProp = {
 }
 
 const csrftoken = getCookieValueWithKey(resp.headers.getSetCookie(),"csrf_token")
-Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption())
+Astro.cookies.set("csrf_token",csrftoken,sessionCookieOption(isProduction))
 ---
 <Layout {...{
     csrftoken,
