--- a/src/components/contact/index.astro
+++ b/src/components/contact/index.astro
@@ -1,6 +1,7 @@
 ---
 import TextInput from '@components/input-fields/text-input';
 import Textarea from '@components/input-fields/textarea';
+import { whiteBtnClass } from '@misc';
 ---
 
 <form class=`max-w-xl mx-auto hidden flex-col justify-center py-4 px-4` id="contact-form">
@@ -43,8 +44,9 @@ import Textarea from '@components/input-fields/textarea';
         placeholder='Your Message *'
         required
     />
+    <div id="turnstile" />
     <p id="confact-form-error-msg" class="mt-4 text-red-700 text-sm hidden" />
-    <input id='form-submit' disabled type="submit" value="Submit" class="turnstile-check w-full mt-6 py-2 uppercase font-serif tracking-[0.2rem] md:tracking-[0.3rem] [word-spacing:0.05em] md:[word-spacing:0.1em] cursor-pointer text-white bg-gray-600 border border-gray-600 enabled:mouse:hover:bg-black enabled:mouse:hover:border-black duration-300 font-semibold text-xs md:text-base disabled:cursor-not-allowed" />
+    <input id="form-submit" disabled type="submit" value="Submit" class="w-full mt-6 py-2 uppercase font-serif tracking-[0.2rem] md:tracking-[0.3rem] [word-spacing:0.05em] md:[word-spacing:0.1em] cursor-pointer text-white bg-gray-600 border border-gray-600 enabled:mouse:hover:bg-black enabled:mouse:hover:border-black duration-300 font-semibold text-xs md:text-base disabled:cursor-not-allowed" />
 </form>
 <div id="submit-success" class="max-w-96 mx-auto hidden flex-col justify-center py-4 px-4">
     <h1 class="font-display text-2xl [word-spacing:0.3rem]">Message Received</h1>
