--- a/src/components/layout/index.astro
+++ b/src/components/layout/index.astro
@@ -224,6 +224,7 @@ const hasContactForm = Astro.url.pathname === '/contact'
   <ErrorMsgModal />
   <CollectionPointOnQtyIncrease />
   <slot name="body-end" />
+  <div id="turnstile" />
 </body>
 </html>
 
